--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,13 @@
     "128": "lib/img/youtoo_logo_128.png"
   },
   "author": "Pierce Moore <me@prex.io>",
-  "background": {
-    "scripts": ["lib/js/main.js"],
-    "persistent": false
-  },
   "browser_action": {
     "default_icon": {
       "19": "lib/img/youtoo_logo_19.png",
       "38": "lib/img/youtoo_logo_38.png"
     },
     "default_title": "Youtoo Tools",
-    "default_popup": "lib/youtoo_tools.html"
+    "default_popup": "lib/popup.html"
   },
   "offline_enabled": true,
   "permissions": [
